--- a/src/Panama/Resources/Dictionary/Brush.xaml
+++ b/src/Panama/Resources/Dictionary/Brush.xaml
@@ -2,6 +2,37 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
+    <!-- Basic brushes -->
+    <SolidColorBrush x:Key="DefaultBackgroundBrush" Color="#ffffff"/>
+    <SolidColorBrush x:Key="DefaultForegroundBrush" Color="#0000f0"/>
+    <SolidColorBrush x:Key="DarkForegroundBrush" Color="Gray"/>
+    <SolidColorBrush x:Key="DefaultMenuBrush" Color="#707070"/>
+    <SolidColorBrush x:Key="DefaultBorderBrush" Color="#a0a0a0"/>
+    <SolidColorBrush x:Key="DisabledBorderBrush" Color="#bcbcbc" />
+    <SolidColorBrush x:Key="DefaultIconBrush" Color="RoyalBlue" />
+       
+    <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
+    <SolidColorBrush x:Key="DisabledBackgroundBrush" Color="#EEE" />
+    <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#DDD" />
+    <SolidColorBrush x:Key="TextBoxForegoundBrush" Color="Blue"/>
+    <SolidColorBrush x:Key="TextBoxBackgroundBrush" Color="#FFF8F8DF"/> 
+    
+    <!-- Window -->
+    <SolidColorBrush x:Key="TitleBarBackgroundBrush" Color="LightSteelBlue"/>
+    <SolidColorBrush x:Key="TitleBarForegroundBrush" Color="#404040"/>
+    <SolidColorBrush x:Key="TitleBarErrorBackgroundBrush" Color="Coral"/>
+    <SolidColorBrush x:Key="TitleBarErrorForegroundBrush" Color="GhostWhite"/>
+    <SolidColorBrush x:Key="TitleBarBorderBrush" Color="LightGray"/>
+    <SolidColorBrush x:Key="TitleBarButtonBrush" Color="DarkGreen"/>
+
+    <!-- Other -->
+    <SolidColorBrush x:Key="NavigatorIconBrush" Color="LightSlateGray"/>
+    <SolidColorBrush x:Key="AlertForegroundBrush" Color="Red"/>
+    <SolidColorBrush x:Key="DarkAlertForegroundBrush" Color="#C00000"/>
+    <SolidColorBrush x:Key="LabelBrush" Color="#FF021F51"/>
+
+
+
     <!-- Brush used for text block opener -->
     <LinearGradientBrush x:Key="OpenerBrush" StartPoint="0.00,0.00" EndPoint="1.00,0.00">
         <GradientBrush.GradientStops>
@@ -41,33 +72,6 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="HorizontalNormalBrush" StartPoint="0,0" EndPoint="1,0">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#CCC" Offset="0.0"/>
-                <GradientStop Color="#FFF" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="LightBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FFF" Offset="0.0"/>
-                <GradientStop Color="#DDD" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="HorizontalLightBrush" StartPoint="0,0" EndPoint="1,0">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FFF" Offset="0.0"/>
-                <GradientStop Color="#DDD" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-
     <LinearGradientBrush x:Key="DarkBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
@@ -88,24 +92,10 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
-    <SolidColorBrush x:Key="DisabledBackgroundBrush" Color="#EEE" />
-    <SolidColorBrush x:Key="WindowBackgroundBrush" Color="#FFF" />
-    <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#DDD" />
-    <SolidColorBrush x:Key="TextBoxForegoundBrush" Color="Blue"/>
-    <SolidColorBrush x:Key="TextBoxBackgroundBrush" Color="#FFF8F8DF"/>
+
     
     <!-- Border Brushes -->
     <LinearGradientBrush x:Key="NormalBorderBrush" StartPoint="0,0" EndPoint="0,1">
-        <GradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#CCC" Offset="0.0"/>
-                <GradientStop Color="#444" Offset="1.0"/>
-            </GradientStopCollection>
-        </GradientBrush.GradientStops>
-    </LinearGradientBrush>
-    
-    <LinearGradientBrush x:Key="HorizontalNormalBorderBrush" StartPoint="0,0" EndPoint="1,0">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#CCC" Offset="0.0"/>
@@ -132,17 +122,11 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <!-- Solid Brushes -->
-    <SolidColorBrush x:Key="DisabledBorderBrush" Color="#AAA" />
-    <SolidColorBrush x:Key="SolidBorderBrush" Color="#888" />
-    <SolidColorBrush x:Key="LightBorderBrush" Color="#AAA" />
 
-    <!-- Miscellaneous Brushes -->
-    <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
-    <SolidColorBrush x:Key="LightColorBrush" Color="#DDD" />
+
 
     <!-- Some colors to stay consistent -->
-    <SolidColorBrush x:Key="LabelBrush" Color="#FF021F51"/>
+
     
     <!-- Defines the color used to highlight grid rows -->
     <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#FF79ABBB"/>
