--- a/src/Panama/Resources/Dictionary/Panel.xaml
+++ b/src/Panama/Resources/Dictionary/Panel.xaml
@@ -1,13 +1,12 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
-    <Style TargetType="GridSplitter" x:Key="GridSplitterVertical">
-        <Setter Property="Width" Value="4"/>
-        <Setter Property="Margin" Value="0,6"/>
+    
+    <Style x:Key="VerticalGridSplitterStyle" TargetType="GridSplitter">
+        <Setter Property="Width" Value="2"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="Background" Value="LightGray"/>
+        <Setter Property="Background" Value="{StaticResource DarkForegroundBrush}"/>
     </Style>
-
+    
 </ResourceDictionary>
