--- a/src/Panama/View/Windows/MainWindow.xaml
+++ b/src/Panama/View/Windows/MainWindow.xaml
@@ -1,14 +1,19 @@
-﻿<Window x:Class="Restless.Panama.View.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-        xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
-        d:DesignHeight="300" d:DesignWidth="610"
-        mc:Ignorable="d" 
-        Title="{Binding Path=DisplayName}" 
-        FontFamily="Verdana"
-        WindowStartupLocation="CenterScreen">
+﻿<tk:AppWindow
+    x:Class="Restless.Panama.View.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
+    d:DesignHeight="300" d:DesignWidth="610"
+    mc:Ignorable="d" 
+    Style="{StaticResource DefaultAppWindowStyle}"
+    Title="{Binding Path=DisplayName, Mode=OneTime}" 
+    TextOptions.TextRenderingMode="ClearType"
+    WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -17,56 +22,102 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-    <DockPanel>
-        <DockPanel DockPanel.Dock="Top" KeyboardNavigation.TabNavigation="None">
-            <Menu KeyboardNavigation.TabNavigation="Cycle">
-                <MenuItem Header="_File">
-                    <MenuItem Header="Save" Icon="{StaticResource ImageSaveMenu}" Command="{Binding Commands[Save]}" />
-                    <MenuItem Header="Close all tabs" Command="{Binding Commands[CloseAll]}"/>
-                    <Separator />
-                    <MenuItem Header="E_xit" Icon="{StaticResource ImageCloseMenu}" Command="{Binding Commands[Close]}" />
-                </MenuItem>
-                <MenuItem Header="_Settings">
-                    <MenuItem Header="Authors" Icon="{StaticResource ImageUserMenu}" Command="{Binding Commands[Author]}" />
-                    <MenuItem Header="Tags" Icon="{StaticResource ImageTagMenu}" Command="{Binding Commands[Tag]}"/>
-                    <MenuItem Header="Credentials" Icon="{StaticResource ImageCredentialMenu}" Command="{Binding Commands[Credential]}"/>
-                    <Separator />
-                    <MenuItem Header="Settings" Icon="{StaticResource ImageConfigMenu}" Command="{Binding Commands[Config]}" />
-                </MenuItem>
-                <MenuItem Header="_Other">
-                    <MenuItem Header="Alerts" Icon="{StaticResource ImageCalendarMenu}" Command="{Binding Commands[Alert]}"/>
-                    <MenuItem Header="Notes" Icon="{StaticResource ImageNoteMenu}" Command="{Binding Commands[Note]}"/>
-                    <MenuItem Header="Links" Icon="{StaticResource ImageLinkMenu}" Command="{Binding Commands[Link]}"/>
-                    <MenuItem Header="Self Publishers" Icon="{StaticResource ImagePublisherMenu}" Command="{Binding Commands[SelfPublisher]}"/>
-                    <Separator/>
-                    <MenuItem Header="Statistics" Icon="{StaticResource ImageStatisticsMenu}" Command="{Binding Commands[Statistics]}"/>
-                </MenuItem>
-                <MenuItem Header="_Tools">
-                    <MenuItem Header="Update Meta" Icon="{StaticResource ImageToolMetaMenu}" Command="{Binding Commands[ToolMeta]}"/>
-                    <MenuItem Header="Export" Icon="{StaticResource ImageToolExportMenu}" Command="{Binding Commands[ToolExport]}"/>
-                    <MenuItem Header="Title List" Icon="{StaticResource ImageToolTitleListMenu}" Command="{Binding Commands[ToolTitleList]}"/>
-                    <MenuItem Header="Message Sync" Icon="{StaticResource ImageToolMessageSyncMenu}" Command="{Binding Commands[ToolMessageSync]}"/>
-                    <MenuItem Header="Table Info" Icon="{StaticResource ImageDatabaseMenu}" Command="{Binding Commands[Table]}"/>
-                    <Separator/>
-                    <MenuItem Header="Find Orphans" Icon="{StaticResource ImageToolOrphanMenu}" Command="{Binding Commands[ToolOrphan]}"/>
-                    <MenuItem Header="Search" Icon="{StaticResource ImageToolSearchMenu}" Command="{Binding Commands[ToolSearch]}"/>
-                    <MenuItem Header="Convert" Icon="{StaticResource ImageToolConvertMenu}" Command="{Binding Commands[ToolConvert]}"/>
-                    <MenuItem Header="Scramble" Command="{Binding Commands[ToolScramble]}"/>
-                    <Separator/>
-                    <MenuItem Header="Reset window" Icon="{StaticResource ImageUndoMenu}" Command="{Binding Commands[ResetWindow]}" ToolTip="Reset the main window size to default"/>
-                </MenuItem>
-                <MenuItem Header="_Help">
-                    <MenuItem Header="Reference" Icon="{StaticResource ImageReferenceMenu}" Command="{Binding Commands[Reference]}"/>
-                    <Separator/>
-                    <MenuItem Header="About" Icon="{StaticResource ImageInformationMenu}" Command="{Binding Commands[About]}"/>
-                </MenuItem>
-            </Menu>
-        </DockPanel>
-        <!-- ItemsControl to hold the main toolbar buttons -->
-        <ItemsControl DockPanel.Dock="Top" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
-        <Border DockPanel.Dock="Top" Style="{StaticResource MainBorderSeparator}" />
+    <tk:AppWindow.Menu>
+        <Menu KeyboardNavigation.TabNavigation="Cycle">
+            <MenuItem Header="_File">
+                <MenuItem Header="Save" Icon="{StaticResource SaveIconKey}" Command="{Binding Commands[Save]}" />
+                <MenuItem Header="Close all tabs" Command="{Binding Commands[CloseAll]}"/>
+                <Separator />
+                <MenuItem Header="E_xit" Icon="{StaticResource ExitIconKey}" Command="{Binding Commands[Close]}" />
+            </MenuItem>
+            <MenuItem Header="_Settings">
+                <MenuItem Header="Authors" Icon="{StaticResource ImageUserMenu}" Command="{Binding Commands[Author]}" />
+                <MenuItem Header="Tags" Icon="{StaticResource ImageTagMenu}" Command="{Binding Commands[Tag]}"/>
+                <MenuItem Header="Credentials" Icon="{StaticResource ImageCredentialMenu}" Command="{Binding Commands[Credential]}"/>
+                <Separator />
+                <MenuItem Header="Settings" Icon="{StaticResource ImageConfigMenu}" Command="{Binding Commands[Config]}" />
+            </MenuItem>
+            <MenuItem Header="_Other">
+                <MenuItem Header="Alerts" Icon="{StaticResource ImageCalendarMenu}" Command="{Binding Commands[Alert]}"/>
+                <MenuItem Header="Notes" Icon="{StaticResource ImageNoteMenu}" Command="{Binding Commands[Note]}"/>
+                <MenuItem Header="Links" Icon="{StaticResource ImageLinkMenu}" Command="{Binding Commands[Link]}"/>
+                <MenuItem Header="Self Publishers" Icon="{StaticResource ImagePublisherMenu}" Command="{Binding Commands[SelfPublisher]}"/>
+                <Separator/>
+                <MenuItem Header="Statistics" Icon="{StaticResource ImageStatisticsMenu}" Command="{Binding Commands[Statistics]}"/>
+            </MenuItem>
+            <MenuItem Header="_Tools">
+                <MenuItem Header="Update Meta" Icon="{StaticResource ImageToolMetaMenu}" Command="{Binding Commands[ToolMeta]}"/>
+                <MenuItem Header="Export" Icon="{StaticResource ImageToolExportMenu}" Command="{Binding Commands[ToolExport]}"/>
+                <MenuItem Header="Title List" Icon="{StaticResource ImageToolTitleListMenu}" Command="{Binding Commands[ToolTitleList]}"/>
+                <MenuItem Header="Message Sync" Icon="{StaticResource ImageToolMessageSyncMenu}" Command="{Binding Commands[ToolMessageSync]}"/>
+                <MenuItem Header="Table Info" Icon="{StaticResource ImageDatabaseMenu}" Command="{Binding Commands[Table]}"/>
+                <Separator/>
+                <MenuItem Header="Find Orphans" Icon="{StaticResource ImageToolOrphanMenu}" Command="{Binding Commands[ToolOrphan]}"/>
+                <MenuItem Header="Search" Icon="{StaticResource ImageToolSearchMenu}" Command="{Binding Commands[ToolSearch]}"/>
+                <MenuItem Header="Convert" Icon="{StaticResource ImageToolConvertMenu}" Command="{Binding Commands[ToolConvert]}"/>
+                <MenuItem Header="Scramble" Command="{Binding Commands[ToolScramble]}"/>
+                <Separator/>
+                <MenuItem Header="Reset window" Icon="{StaticResource ImageUndoMenu}" Command="{Binding Commands[ResetWindow]}" ToolTip="Reset the main window size to default"/>
+            </MenuItem>
+            <MenuItem Header="_Help">
+                <MenuItem Header="Reference" Icon="{StaticResource ImageReferenceMenu}" Command="{Binding Commands[Reference]}"/>
+                <Separator/>
+                <MenuItem Header="About" Icon="{StaticResource ImageInformationMenu}" Command="{Binding Commands[About]}"/>
+            </MenuItem>
+        </Menu>
+    </tk:AppWindow.Menu>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition
+                MinWidth="{x:Static core:Config+MainNavigation.MinWidth}"
+                MaxWidth="{x:Static core:Config+MainNavigation.MaxWidth}"
+                Width="{Binding MainNavigationWidth, Mode=TwoWay}"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="32"/>
+        </Grid.RowDefinitions>
 
-        <Grid Margin="4" DockPanel.Dock="Top">
+        <!-- Main navigator -->
+        <StackPanel>
+            <TextBlock
+                Style="{StaticResource NavTitleTextBlockStyle}"
+                Text="{Binding AppInfo.Assembly.Product}"/>
+
+            <tk:MainNavigator
+                IsExpanded="{Binding Config.NavTitlesExpander}"
+                HeaderText="{x:Static r:Strings.NavHeaderMain}"
+                ItemsSource="{Binding NavigatorItems.Groups[0]}" 
+                SelectedItem="{Binding NavigatorItems.SelectedItems[0]}"/>
+
+            <tk:MainNavigator
+                IsExpanded="{Binding Config.NavToolsExpander}"
+                HeaderText="{x:Static r:Strings.NavHeaderTools}"
+                ItemsSource="{Binding NavigatorItems.Groups[1]}"
+                SelectedItem="{Binding NavigatorItems.SelectedItems[1]}"/>
+
+            <tk:MainNavigator
+                IsExpanded="{Binding Config.NavOtherExpander}"
+                HeaderText="{x:Static r:Strings.NavHeaderOther}"
+                ItemsSource="{Binding NavigatorItems.Groups[2]}"
+                SelectedItem="{Binding NavigatorItems.SelectedItems[2]}"/>
+
+        </StackPanel>
+
+        <!-- Navigator splitter -->
+        <GridSplitter Grid.Column="1" Style="{StaticResource VerticalGridSplitterStyle}"/>
+        
+        <!-- Status bar (bottom) -->
+        <StatusBar Grid.Row="1" Grid.ColumnSpan="3"/>
+
+
+        <!-- ItemsControl to hold the main toolbar buttons -->
+        <!--<ItemsControl DockPanel.Dock="Top" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
+        <Border DockPanel.Dock="Top" Style="{StaticResource MainBorderSeparator}" />-->
+
+        <!--<Grid Margin="4" DockPanel.Dock="Top">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="24" />
@@ -83,6 +134,6 @@
             <StatusBar Grid.Row="1">
                 <TextBlock Style="{StaticResource StatusBarNotificationMessage}"/>
             </StatusBar>
-        </Grid>
-    </DockPanel>
-</Window>
+        </Grid>-->
+    </Grid>
+</tk:AppWindow>
