--- a/src/Panama/Resources/Dictionary/Border.xaml
+++ b/src/Panama/Resources/Dictionary/Border.xaml
@@ -1,9 +1,13 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
+    <Style x:Key="MainContentBorderStyle" TargetType="Border">
+        <Setter Property="Padding" Value="10"/>
+    </Style>
 
-    <Style x:Key="BorderGridContainer" TargetType="Border">
-        <Setter Property="Padding" Value="6"/>
+    <Style x:Key="BorderEditContainerStyle" TargetType="Border">
+        <Setter Property="Padding" Value="10"/>
     </Style>
 
 </ResourceDictionary>
