--- a/src/Panama/Resources/Dictionary/Button.xaml
+++ b/src/Panama/Resources/Dictionary/Button.xaml
@@ -1,9 +1,35 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:tk="http://schemas.restless.toolkit.com/2021">
+
+    <Style x:Key="DefaultIconButtonStyle" TargetType="tk:IconButton">
+        <Setter Property="Height" Value="28"/>
+        <Setter Property="Margin" Value="3,0"/>
+        <Setter Property="Padding" Value="8,4"/>
+        <Setter Property="IconPadding" Value="4"/>
+        <Setter Property="VerticalIconAlignment" Value="Center"/>
+        <Setter Property="HorizontalIconAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Right"/>
+        <Setter Property="HorizontalPressedMovement" Value="2.0"/>
+        <Setter Property="VerticalPressedMovement" Value="0"/>
+        <Setter Property="CornerRadius" Value="2"/>
+        <Setter Property="Background" Value="{StaticResource ActionButtonBackgroundBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource ActionButtonForegroundBrush}"/>
+        <Setter Property="RolloverBrush" Value="{StaticResource ActionButtonRolloverBrush}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource LightBorderBrush}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+    </Style>
+
+    <Style TargetType="tk:IconButton" BasedOn="{StaticResource DefaultIconButtonStyle}"/>
+
+    <Style TargetType="Button" x:Key="{x:Static ToolBar.ButtonStyleKey}">
+    </Style>
+
 
     <!-- Style for a tool bar style button. -->
-    <Style TargetType="Button" x:Key="ToolBarButton" BasedOn="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+    <!--<Style TargetType="Button" x:Key="ToolBarButton" BasedOn="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
         <Setter Property="Focusable" Value="False" />
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Margin" Value="0,0,-2,0" />
@@ -31,9 +57,9 @@
                 <Setter Property="Background" Value="Teal"/>
             </Trigger>
         </Style.Triggers>
-    </Style>
+    </Style>-->
 
-    <Style TargetType="Button" x:Key="MainMenuButton" BasedOn="{StaticResource ToolBarButton}">
+    <!--<Style TargetType="Button" x:Key="MainMenuButton" BasedOn="{StaticResource ToolBarButton}">
         <Setter Property="Foreground" Value="DarkBlue" />
         <Setter Property="FontWeight" Value="Normal" />
         <Style.Triggers>
@@ -41,26 +67,26 @@
                 <Setter Property="Background" Value="#FFEEEEEE"/>
             </Trigger>
         </Style.Triggers>
-    </Style>
+    </Style>-->
 
 
     <!-- Style used for a Button's border -->
-    <Style TargetType="Border" x:Key="ButtonBorder">
+    <!--<Style TargetType="Border" x:Key="ButtonBorder">
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="CornerRadius" Value="4"/>
         <Setter Property="Background" Value="{StaticResource NormalBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource NormalBorderBrush}"/>
-    </Style>
+    </Style>-->
 
     <!-- Base style for Button -->
-    <Style TargetType="Button" BasedOn="{StaticResource BaseControl}">
+    <!--<Style TargetType="Button" BasedOn="{StaticResource BaseControl}">
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="OverridesDefaultStyle" Value="true"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="FontSize" Value="11" />
         <Setter Property="Foreground" Value="MidnightBlue" />
-        <!--<Setter Property="MinWidth" Value="{StaticResource MinButtonWidth}" />-->
+        --><!--<Setter Property="MinWidth" Value="{StaticResource MinButtonWidth}" />--><!--
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -91,6 +117,6 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 
 </ResourceDictionary>
