--- a/src/Panama/Resources/Dictionary/Control.xaml
+++ b/src/Panama/Resources/Dictionary/Control.xaml
@@ -1,55 +1,56 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:tk="http://schemas.restless.toolkit.com/2021">
 
-    <!-- Base style for all controls   -->
-    <Style x:Key="BaseControl" TargetType="Control">
-        <Setter Property="FontSize" Value="{StaticResource ControlFontSize}"/>
+    <!-- Default (base) style for all controls   -->
+    <Style x:Key="DefaultControlStyle" TargetType="Control">
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}"/>
         <Setter Property="Foreground" Value="{StaticResource DefaultForegroundBrush}"/>
     </Style>
 
     <!-- Base style for TextBox  -->
-    <Style TargetType="TextBox" BasedOn="{StaticResource BaseControl}">
+    <Style x:Key="DefaultTextBoxStyle" TargetType="TextBox" BasedOn="{StaticResource DefaultControlStyle}">
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Background" Value="{StaticResource TextBoxBackgroundBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource TextBoxForegroundBrush}"/>
         <Style.Triggers>
             <Trigger Property="IsReadOnly" Value="True">
-                <Setter Property="Background" Value="#FFE3E3E3"/>
-                <Setter Property="Foreground" Value="DarkGray" />
+                <Setter Property="Background" Value="{StaticResource DisabledBackgroundBrush}"/>
+                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}" />
             </Trigger>
         </Style.Triggers>
     </Style>
 
+    <Style TargetType="TextBox" BasedOn="{StaticResource DefaultTextBoxStyle}"/>
+
     <!-- Base style for CheckBox -->
-    <Style TargetType="CheckBox" BasedOn="{StaticResource BaseControl}">
+    <Style TargetType="CheckBox" BasedOn="{StaticResource DefaultControlStyle}">
         <Setter Property="VerticalAlignment" Value="Bottom"/>
         <Setter Property="Margin" Value="4,0,4,0" />
         <Setter Property="Cursor" Value="Hand" />
     </Style>
 
     <!-- Base style for RadioButton -->
-    <Style TargetType="RadioButton" BasedOn="{StaticResource BaseControl}">
+    <Style TargetType="RadioButton" BasedOn="{StaticResource DefaultControlStyle}">
         <Setter Property="FontSize" Value="12.5" />
         <Setter Property="Margin" Value="8,4" />
         <Setter Property="Cursor" Value="Hand" />
     </Style>
 
     <!-- Base style for ComboBox-->
-    <Style TargetType="ComboBox" BasedOn="{StaticResource BaseControl}">
+    <Style TargetType="ComboBox" BasedOn="{StaticResource DefaultControlStyle}">
         <Setter Property="MinHeight" Value="24" />
         <Setter Property="Height" Value="24" />
         <Setter Property="VerticalAlignment" Value="Top"/>
     </Style>
 
     <!-- Base style for ListBox -->
-    <Style TargetType="ListBox" BasedOn="{StaticResource BaseControl}">
+    <Style TargetType="ListBox" BasedOn="{StaticResource DefaultControlStyle}">
         <Setter Property="FontSize" Value="11.0"/>
         <Setter Property="MinHeight" Value="80"/>
-        <Style.Resources>
-            <!-- This enables the selected row to retain a highlight when the data grid loses focus. Has a problem with .Net 4.0 -->
-            <!--<SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="LightSalmon"/>-->
-            <!-- This works in .Net 4.0 -->
-            <!--<SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="{StaticResource InactiveSelectionColor}" />-->
-        </Style.Resources>
     </Style>
 
     <!-- Base style for GroupBox -->
@@ -67,31 +68,23 @@
         </Setter>
     </Style>
 
+    <Style x:Key="DefaultRadioButtonStyle" TargetType="tk:RadioButton">
+        <Setter Property="TemplateStyle" Value="Underline"/>
+        <Setter Property="Margin" Value="8,0"/>
+        <Setter Property="Padding" Value="0,2"/>
+        <Setter Property="Foreground" Value="{StaticResource SelectorForegroundBrush}"/>
+        <Setter Property="Background" Value="{StaticResource SelectorBackgroundBrush}"/>
+        <Setter Property="UnderlineHeight" Value="3"/>
+    </Style>
+
+    <Style TargetType="tk:RadioButton" BasedOn="{StaticResource DefaultRadioButtonStyle}"/>
+
     <Style TargetType="MenuItem">
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Opacity" Value="0.5" />
             </Trigger>
         </Style.Triggers>
-    </Style>
-
-    <!-- Base style for Expander. Configures the header -->
-    <Style TargetType="Expander">
-        <Setter Property="HeaderTemplate">
-            <Setter.Value>
-                <DataTemplate>
-                    <Label Margin="2" Content="{TemplateBinding Content}"/>
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="IsTabStop" Value="False" />
-    </Style>
-    
-    <!-- Base style for StatusBar -->
-    <Style TargetType="StatusBar">
-        <Setter Property="Background" Value="{StaticResource TitleBarBackgroundBrush}"/>
-        <Setter Property="BorderThickness" Value="0,2,0,0" />
-        <Setter Property="BorderBrush" Value="{StaticResource DefaultBorderBrush}" />
     </Style>
     
 </ResourceDictionary>
