--- a/src/Panama/Resources/Dictionary/TextBox.xaml
+++ b/src/Panama/Resources/Dictionary/TextBox.xaml
@@ -1,25 +1,22 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
-    <!-- Style for text box that accepts multiple lines -->
-    <Style TargetType="TextBox" x:Key="TextBoxMulti" BasedOn="{StaticResource {x:Type TextBox}}">
+    
+    <Style x:Key="TextBoxMultiStyle" TargetType="TextBox" BasedOn="{StaticResource DefaultTextBoxStyle}">
+        <Setter Property="Margin" Value="{StaticResource DataEntryPanelDefaultControlMargin}"/>
         <Setter Property="AcceptsReturn" Value="True" />
         <Setter Property="TextWrapping" Value="Wrap" />
-        <Setter Property="Height" Value="220" />
+        <Setter Property="MinHeight" Value="220"/>
+        <Setter Property="VerticalContentAlignment" Value="Top"/>
         <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
     </Style>
 
-    <!-- Style for text box that accepts multiple lines and fills available space -->
-    <Style TargetType="TextBox" x:Key="TextBoxMultiFull" BasedOn="{StaticResource {x:Type TextBox}}">
-        <Setter Property="AcceptsReturn" Value="True" />
-        <Setter Property="TextWrapping" Value="Wrap" />
-        <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+    <Style x:Key="TextBoxMultiStretchStyle" TargetType="TextBox" BasedOn="{StaticResource TextBoxMultiStyle}">
         <Setter Property="VerticalAlignment" Value="Stretch"/>
     </Style>
-
+    
     <!-- Styles a read-only text box so it's like a label. -->
-    <Style TargetType="TextBox" x:Key="TextBoxLabel" BasedOn="{StaticResource {x:Type TextBox}}">
+    <Style x:Key="TextBoxLabel" TargetType="TextBox" BasedOn="{StaticResource DefaultTextBoxStyle}">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="IsReadOnly" Value="True" />
@@ -35,20 +32,19 @@
         </Style.Triggers>
     </Style>
 
-    <Style TargetType="TextBox" x:Key="TextBoxFolderName" BasedOn="{StaticResource {x:Type TextBox}}">
+    <!--<Style x:Key="TextBoxFolderName" TargetType="TextBox" BasedOn="{StaticResource DefaultTextBoxStyle}">
         <Setter Property="IsReadOnly" Value="True" />
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="TextWrapping" Value="NoWrap" />
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="0,2"/>
-        <!-- need to override triggers in base TextBox style -->
         <Style.Triggers>
             <Trigger Property="IsReadOnly" Value="True">
-                <Setter Property="Foreground" Value="{StaticResource TextBoxForegoundBrush}" />
-                <Setter Property="Background" Value="{StaticResource TextBoxBackgroundBrush}"/>
+                <Setter Property="Foreground" Value="{StaticResource}" />
+                <Setter Property="Background" Value="{StaticResource}"/>
             </Trigger>
         </Style.Triggers>
-    </Style>
+    </Style>-->
 
 
 
