--- a/src/Panama/Resources/Dictionary/Value.xaml
+++ b/src/Panama/Resources/Dictionary/Value.xaml
@@ -7,7 +7,9 @@
     xmlns:con="clr-namespace:Restless.Panama.Controls">
 
     <!-- Base control size definitions -->
-    <sys:Double x:Key="ControlFontSize">12</sys:Double>
+    <sys:Double x:Key="DefaultFontSize">12</sys:Double>
+    <sys:Double x:Key="MediumFontSize">11</sys:Double>
+    <sys:Double x:Key="SmallFontSize">10</sys:Double>
     <sys:Double x:Key="MinControlHeight">26</sys:Double>
     <sys:Double x:Key="MinButtonWidth">94</sys:Double>
 
