--- a/src/Panama/View/TitleView.xaml
+++ b/src/Panama/View/TitleView.xaml
@@ -2,55 +2,98 @@
     x:Class="Restless.Panama.View.TitleView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:view="clr-namespace:Restless.Panama.View"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:cv="clr-namespace:Restless.Panama.Core"
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
+    xmlns:view="clr-namespace:Restless.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="355">
     <Grid>
         <Grid.ColumnDefinitions>
-            <!-- MaxWidth binds to a value relative to the width of the grid. Converter parm is the desired min width of right column -->
-            <ColumnDefinition Width="{Binding Config.LeftColumnTitle,Mode=TwoWay}" MinWidth="360" MaxWidth="{Binding Path=ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}, Converter={cv:SubtractionConverter}, ConverterParameter=450}" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
+            <!-- 
+            MaxWidth binds to a value relative to the width of the grid. 
+            Converter parm is the desired min width of right column
+            -->
+            <ColumnDefinition 
+                Width="{Binding Config.LeftColumnTitle, Mode=TwoWay}"
+                MaxWidth="{Binding ActualWidth,
+                RelativeSource={RelativeSource AncestorType=Grid},
+                Converter={cv:SubtractionConverter}, ConverterParameter=372}"
+                MinWidth="480"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
+        
+        <StatusBar Margin="0,0,4,0">
+            <TextBlock Text="Filters"/>
+            <tk:IconButton 
+                Content="Ready"
+                ToolTip="{x:Static r:Strings.ToolTipTitleFilterReady}"
+                Icon="{StaticResource SquareSmallGreenIconKey}" 
+                Command="{Binding Commands[ReadyFilter]}"/>
+            
+            <tk:IconButton
+                Content="Flagged"
+                ToolTip="{x:Static r:Strings.ToolTipTitleFilterFlag}"
+                Icon="{StaticResource SquareSmallBlueIconKey}"
+                Command="{Binding Commands[FlaggedFilter]}"/>
+            
+            <tk:IconButton
+                Content="Submitted"
+                ToolTip="{x:Static r:Strings.ToolTipTitleFilterSubmitted}"
+                Icon="{StaticResource SquareSmallGrayIconKey}"
+                Command="{Binding Commands[SubmittedFilter]}"/>
+            
+            <tk:IconButton
+                Content="Published"
+                ToolTip="{x:Static r:Strings.ToolTipTitleFilterPublished}"
+                Icon="{StaticResource SquareSmallRedIconKey}"
+                Command="{Binding Commands[PublishedFilter]}"/>
 
-        <!-- Controls specific to this view-->
-        <Grid Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <!--<view:SimpleRowFilter Grid.Column="0" HorizontalAlignment="Left" />-->
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Style="{StaticResource TextBlockMessage}" Text="{Binding Filters.RecordCountText}"/>
-                <TextBlock Style="{StaticResource TextBlockMessage}" Visibility="{Binding Config.TitleFilter.IsAnyFilterActive,Converter={cv:BooleanToVisibilityConverter}}"> - Row filter is in effect</TextBlock>
-            </StackPanel>
-            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
-        </Grid>
+            <Separator/>
+            
+            <tk:IconButton
+                Content="{x:Static r:Strings.MenuItemCustom}"
+                ToolTip="{x:Static r:Strings.ToolTipFilterCustom}"
+                Icon="{StaticResource FilterIconKey}"
+                Command="{Binding Commands[ToggleFilter]}"/>
+            
+            <tk:IconButton
+                Content="{x:Static r:Strings.MenuItemClear}"
+                ToolTip="{x:Static r:Strings.ToolTipFilterClear}"
+                Icon="{StaticResource FilterOffIconKey}"
+                Command="{Binding Commands[ClearFilter]}"/>
+
+            <Separator/>
+            
+            <TextBlock Text="{Binding Filters.RecordCountText}"/>
+            <TextBlock 
+                tk:Property.IsVisible="{Binding Config.TitleFilter.IsAnyFilterActive}"
+                Foreground="{StaticResource DarkAlertForegroundBrush}"
+                Text="(row filter in effect)"/>
+        </StatusBar>
 
         <!-- Main data grid to display the tabular data -->
-        <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderGridContainer}">
+        <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderEditContainerStyle}">
             <tk:DataGrid 
-                x:Name="TitleDataGrid"
-                Grid.Row="1" Grid.Column="0"
+                Grid.Row="1"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding Path=MainSource.View}"
                 SelectedItem="{Binding SelectedItem}"
-                tk:DataGridColumns.Columns="{Binding Columns}">
-                <DataGrid.RowStyle>
-                    <!-- Base style contains all the triggers -->
-                    <Style TargetType="DataGridRow" BasedOn="{StaticResource TitleDataGridRowStyle}">
-                        <Setter Property="tk:DataGrid.DoubleClickCommand" Value="{Binding ElementName=TitleDataGrid, Path=DataContext.OpenRowCommand}"/>
-                    </Style>
-                </DataGrid.RowStyle>
-
+                tk:DataGridColumns.Columns="{Binding Columns}"
+                RowStyle="{StaticResource TitleDataGridRowStyle}">
+                
+                <DataGrid.InputBindings>
+                    <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
+                </DataGrid.InputBindings>              
+                
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
@@ -58,16 +101,19 @@
         </Border>
 
         <!-- Splitter -->
-        <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource GridSplitterVertical}" />
+        <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource VerticalGridSplitterStyle}" />
 
-        <ItemsControl Grid.Column="2" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=FilterCommands}"/>
-
-        <Border Grid.Row="1" Grid.Column="2" Style="{StaticResource BorderGridContainer}">
-            <DockPanel>
-                <view:TitleFilter DockPanel.Dock="Top" Visibility="{Binding FilterVisibility}"/>
-                <view:TitleEditWithTab DockPanel.Dock="Top" Visibility="{Binding EditVisibility}"/>
-            </DockPanel>
-
+        <StatusBar Grid.Column="2" Margin="4,0,0,0">
+            <TextBlock 
+                Style="{StaticResource TitleDisplayTextBlockStyle}"
+                Text="{Binding SelectedTitle.Title}"/>
+        </StatusBar>
+        
+        <Border
+            Grid.Row="1" Grid.Column="2"
+            Style="{StaticResource BorderEditContainerStyle}"
+            Visibility="{Binding EditVisibility}">
+            <view:TitleEdit/>
         </Border>
 
     </Grid>
